--- a/whopaidlah_backend/requirements.txt
+++ b/whopaidlah_backend/requirements.txt
@@ -1,24 +1,28 @@
 aniso8601==9.0.1
 attrs==23.2.0
 blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
 Flask-Cors==4.0.0
 flask-restx==1.3.0
+idna==3.6
+importlib-metadata==7.0.1
 importlib-resources==6.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 MarkupSafe==2.1.5
-np==1.0.2
-numpy==1.26.4
-opencv-python==4.9.0.80
 packaging==23.2
 pillow==10.2.0
 pytesseract==0.3.10
 pytz==2024.1
 referencing==0.33.0
+requests==2.31.0
 rpds-py==0.18.0
+urllib3==2.2.1
 Werkzeug==3.0.1
+zipp==3.17.0
