--- a/whopaidlah_frontend/package.json
+++ b/whopaidlah_frontend/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/lab": "^5.0.0-alpha.166",
     "@mui/material": "^5.15.11",
+    "@mui/x-data-grid": "^7.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
